--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   padding: 0.5em;
   font-family: arial, sans-serif;
